--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,47 @@
-<h1> Angular HTTP Basics </h1>
+<div class="center-content">
+    <mat-card class="login-card">
+      <mat-card-header>
+        <mat-card-title>Jira clone</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-tab-group dynamicHeight>
+          <mat-tab label="Login">
+            <mat-form-field class="full-width">
+              <mat-label>Email</mat-label>
+              <input type="email" matInput placeholder="Email" value="" [(ngModel)]="email">
+              <mat-icon matSuffix>email</mat-icon>
+            </mat-form-field>
+  
+            <mat-form-field class="full-width">
+              <mat-label>Password</mat-label>
+              <input type="password" matInput placeholder="Password" [(ngModel)]="password">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+            </mat-form-field>
 
-<button (click)="getPosts()">Nacisnij mnie</button>
-
-
+            <button mat-button color="primary" (click)="login()">Login</button>
+          </mat-tab>
+          <mat-tab label="Register">
+            <mat-form-field class="full-width">
+              <mat-label>Email</mat-label>
+              <input type="email" matInput placeholder="Email" value="" [(ngModel)]="remail">
+              <mat-icon matSuffix>email</mat-icon>
+            </mat-form-field>
+  
+            <mat-form-field class="full-width">
+              <mat-label>Password</mat-label>
+              <input type="password" matInput placeholder="Password" [(ngModel)]="rpassword">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+            </mat-form-field>
+            <mat-form-field class="full-width">
+              <mat-label>Confirm password</mat-label>
+              <input type="password" matInput placeholder="Password" [(ngModel)]="rcpassword">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+            </mat-form-field>
+            <button mat-button color="primary" (click)="register()">Register</button>
+          </mat-tab>
+        </mat-tab-group>
+  
+      </mat-card-content>
+  
+    </mat-card>
+  </div>
