--- a/src/app/components/project-view/project-view.component.scss
+++ b/src/app/components/project-view/project-view.component.scss
@@ -1,95 +1,29 @@
-div{
-    width: 500px;
-  }
-.bg:hover {
-    animation: pulse 1.2s ease infinite;
-}
-@keyframes pulse {
-    0% {
-      transform: scale(1, 1);
-    }
-    50% {
-      opacity: 0.6;
-    }
-    100% {
-      transform: scale(1.2);
-      opacity: 0.1;
-    }
+
+.temp {
+    margin-left: 300px;
+    margin-top: 200px;
 }
 
-h2 {
-    font-size:30px;
+.container {
+    padding: 16px;
 }
 
-.font-large {
-    font-size: 18px;
+.main {
+    padding: 0px 16px;
+    max-width: 800px;
 }
 
-ul{
-    list-style-type:none;
-    padding:0;
-    margin:0;
-}
-ul li {
-    padding:8px 0px;
-    border-bottom:1px solid #ddd;
+h1 {
+    font-size: 40px;
+    padding: 8px 0px;
 }
 
-ul li:hover {
-    background-color: #ccc;
+.members {
+    width: 400px;
+    margin-left: 50px;
 }
 
-.ul li:last-child {
-    border-bottom:none;
-    cursor: pointer;
-}
-
-.circle {
-    border-radius:50%;
-}
-
-.employee-list {
-    box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
-}
-
-.employee-container {
-    padding:0.01em 16px;
-}
-
-.employee-bar {
-    width:100%;
-    overflow:hidden;
-}
-
-.employee-bar-item {
-    padding:8px 16px;
-    float:left;
-    width:auto;
-    border:none;
-    display:block;
-    outline:0;
-}
-
-.employee-button {
-    border:none;
-    display:inline-block;
-    vertical-align:middle;
-    overflow:hidden;
-    text-decoration:none;
-    color:inherit;
-    background-color:inherit;
-    text-align:center;
-    cursor:pointer;
-    white-space:nowrap;
-    margin-right: 30px;
-    padding: 15px;
-}
-
-.employee-button:hover {
-    color:#000!important;
-    background-color:#ccc!important;
-}
-
-.float-right {
-    float:right;
+.project-description {
+    font-size: 17px;
+    padding: 20px 0px;
 }
