--- a/src/app/components/project-view/project-view.component.html
+++ b/src/app/components/project-view/project-view.component.html
@@ -1,28 +1,25 @@
-<div class="employee-container">
-    <h2>Members</h2>
-    <ul class="employee-list">
-      <li class="employee-bar">
-        <img src="https://www.w3schools.com/w3css/img_avatar2.png" class="bg employee-bar-item circle" style="width:60px">
-        <div class="employee-bar-item">
-          <span class="font-large">Joel</span><br>
-          <span>Web Designer</span>
-        </div>
-      </li>
+<div class="temp">
+<div class="container">
+  <div class="title">
+    <h1>Nazwa projektu</h1>
+  </div>
+  <div class="main"  style="float: left;">
+    <div class="project-description">
+      Opis projektu Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+      deserunt mollit anim id est laborum.
+    </div>
+    
+      <app-spring-list></app-spring-list>
+  </div>
+  <div class="members" style="float: left;">
+    <app-project-members></app-project-members>
+  </div>
   
-      <li class="employee-bar">
-        <img src="https://www.w3schools.com/w3css/img_avatar5.png" class="bg employee-bar-item circle" style="width:60px">
-        <div class="employee-bar-item">
-          <span class="font-large">Jill</span><br>
-          <span>Support</span>
-        </div>
-      </li>
   
-      <li class="employee-bar">
-        <img src="https://www.w3schools.com/w3css/img_avatar6.png" class="bg employee-bar-item circle" style="width:60px">
-        <div class="employee-bar-item">
-          <span class="font-large">Jane</span><br>
-          <span>Accountant</span>
-        </div>
-      </li>
-    </ul>
+</div>
 </div>
