--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,23 @@
-<p>main works!</p>
+<header>
+    <a class="logo" >Jira klon</a>
+    <nav>
+        <ul class="nav__links">
+            <li><a href="#">Projekty</a></li>
+            <li><a href="#">Tablica</a></li>
+            <li><a href="#">Utwórz projekt</a></li>
+        </ul>
+    </nav>
+    <a class="cta" href="#">Contact</a>
+    <p class="menu cta">Menu</p>
+</header>
+<div class="overlay">
+    <a class="close">&times;</a>
+    <div class="overlay__content">
+        <a href="#">Projekty</a>
+        <a href="#">Tablica</a>
+        <a href="#">Utwórz projekt</a>
+    </div>
+</div>
+
+<app-sidenav>
+<script type="text/javascript" src="mobile.js"></script>
