Formularz tworzenia projektu

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
         <ul class="nav__links">
             <li><a href="#">Projekty</a></li>
             <li><a href="#">Tablica</a></li>
-            <li><a routerLink="/createProject" href="#">Utwórz projekt</a></li>
+            <li><a href="#">Utwórz projekt</a></li>
         </ul>
     </nav>
     <a class="cta" href="#">Kontakt</a>
