--- a/src/app/components/project-view/project-view.component.html
+++ b/src/app/components/project-view/project-view.component.html
@@ -1,20 +1,18 @@
 <div class="temp">
 <div class="container">
   <div class="title">
-    <h1>Nazwa projektu</h1>
+    <h1>{{this.project.name }}</h1>
   </div>
   <div class="main"  style="float: left;">
     <div class="project-description">
-      Opis projektu Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-      deserunt mollit anim id est laborum.
+      {{this.project.description}}
     </div>
     
-      <app-spring-list></app-spring-list>
+      <app-sprint-list 
+      [activeSprint]="activeSprint"
+      [plannedSprints]="plannedSprints"
+      [finishedSprints]="finishedSprints"
+      ></app-sprint-list>
   </div>
   <div class="members" style="float: left;">
     <app-project-members></app-project-members>
