--- a/src/app/components/main/project-creation-view/project-creation-view.component.html
+++ b/src/app/components/main/project-creation-view/project-creation-view.component.html
@@ -1,23 +1,28 @@
-<form (ngSubmit)="onSubmit()" class="form-container">
+<form (ngSubmit)="onSubmit()" class="form-container" #projectForm="ngForm" novalidate>
     <mat-form-field>
-      <input matInput placeholder="Nazwa projektu" [(ngModel)]="projectName" name="projectName">
+      <input matInput placeholder="Nazwa projektu" [(ngModel)]="projectName" name="projectName" required>
+      <mat-error>Nazwa projektu jest wymagana.</mat-error>
     </mat-form-field>
     <mat-form-field class="description">
-      <textarea matInput placeholder="Opis projektu" [(ngModel)]="projectDescription" name="projectDescription"></textarea>
+      <textarea matInput placeholder="Opis projektu" [(ngModel)]="projectDescription" name="projectDescription" required></textarea>
+      <mat-error>Opis projektu jest wymagany.</mat-error>
     </mat-form-field>
+    
   
     <mat-form-field class="start-date">
       <mat-label>Data rozpoczęcia</mat-label>  
-      <input matInput [matDatepicker]="startDatePicker" placeholder="Data rozpoczęcia" [(ngModel)]="startDate" name="startDate">
+      <input matInput [matDatepicker]="startDatePicker" placeholder="Data rozpoczęcia" [(ngModel)]="startDate" name="startDate" required>
+      <mat-error>Data rozpoczęcia projektu jest wymagana.</mat-error>
       <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #startDatePicker></mat-datepicker>
     </mat-form-field>
     <mat-form-field class="end-date">
         <mat-label>Data zakończenia</mat-label>  
-      <input matInput [matDatepicker]="endDatePicker" placeholder="Data zakończenia" [(ngModel)]="endDate" name="endDate">
+      <input matInput [matDatepicker]="endDatePicker" placeholder="Data zakończenia" [(ngModel)]="endDate" name="endDate" required>
+      <mat-error>Data zakończenia projektu jest wymagana.</mat-error>
       <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #endDatePicker></mat-datepicker>
     </mat-form-field>
   
-    <button mat-raised-button color="primary" type="submit">Utwórz projekt</button>
+    <button mat-raised-button color="primary" type="submit" (click)="creatProject()"[disabled]="!projectForm.form.valid">Utwórz projekt</button>
   </form>
