--- a/src/app/components/main/projectlist/projectlist.component.html
+++ b/src/app/components/main/projectlist/projectlist.component.html
@@ -8,4 +8,7 @@
       </li>
     </ul>
   </div>
-
+  <div class="button-container">
+    <button class="addButton" mat-fab extended (click)="goToCreationProject()"><b><mat-icon>add</mat-icon></b></button>
+  </div>
+  
