widok profilu usera

--- a/src/app/components/main/projectlist/projectlist.component.scss
+++ b/src/app/components/main/projectlist/projectlist.component.scss
@@ -29,6 +29,7 @@
   .addButton{
     position: relative;
     right: 10px;
+    background: rgba(0, 136, 169, 1)
   }
   .button-container {
     display: flex;
