--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,9 +2,10 @@
     <a class="logo" >Jira klon</a>
     <nav>
         <ul class="nav__links">
-            <li><a routerLink="projects">Projekty</a></li>
+            <li><a routerLink="/dashboard">Projekty</a></li>
             <li><a routerLink="board">Tablica</a></li>
             <li><a routerLink="create-project">Utwórz projekt</a></li>
+            <li><a routerLink="account-view">Profil</a></li>
         </ul>
     </nav>
     <a class="cta" href="#">Kontakt</a>
