--- a/src/app/components/project-view/sprint-list/sprint-item/sprint-item.component.scss
+++ b/src/app/components/project-view/sprint-list/sprint-item/sprint-item.component.scss
@@ -1,16 +1,20 @@
 .title {
     font-size: 20px;
+    cursor: pointer;
 }
 
 .details {
-    font-size: 14px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 150px;
 }
 
 .container {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    cursor: pointer;
     padding: 10px 20px;
     margin-bottom: 10px;
     border: 3px solid;
@@ -24,4 +28,9 @@
 .container:hover {
     background-color: #e6e6e6;
     border-color: rgb(0, 255, 170);
+}
+
+.icon-size {
+    font-size: 24px;
+    cursor: pointer;
 }
