--- a/src/app/components/project-view/sprint-list/sprint-list.component.scss
+++ b/src/app/components/project-view/sprint-list/sprint-list.component.scss
@@ -3,7 +3,14 @@ ul {
     padding: 0;
 }
 
+.activeSprint {
+  padding:8px 0px;
+}
 
+.plannedSprints {
+  padding:8px 0px;
+}
 
-
-
+.finishedSprints {
+  padding:8px 0px;
+}
