--- a/src/app/components/project-view/project-view.component.html
+++ b/src/app/components/project-view/project-view.component.html
@@ -1,22 +1,27 @@
+<mat-card class="container">
 
-<div class="container">
-  <div class="title">
-    <h1>{{this.project.name }}</h1>
-  </div>
-  <div class="main"  style="float: left;">
-    <div class="project-description">
-      {{this.project.description}}
-    </div>
-    
-      <app-sprint-list 
-      [activeSprint]="activeSprint"
-      [plannedSprints]="plannedSprints"
-      [finishedSprints]="finishedSprints"
+  <mat-card-header class="title">
+    <h1>{{ this.projectName }}</h1>
+  </mat-card-header>
+
+  <mat-card-content>
+    <div class="main" style="float: left;">
+
+      <div class="project-description">
+        {{ this.projectDescription }}
+      </div>
+
+      <app-sprint-list
+      [activeSprint]="undefined"
+      [plannedSprints]="[]"
+      [finishedSprints]="[]"
+      (sprintStarted)="onSprintStart($event)"
+      (sprintFinished)="onSprintEnd($event)"
       ></app-sprint-list>
-  </div>
-  <div class="members" style="float: left;">
-    <app-project-members></app-project-members>
-  </div>
-  
-  
-</div>
+    </div>
+    <div class="members" style="float: left;">
+      <app-project-members></app-project-members>
+    </div>
+  </mat-card-content>
+
+</mat-card>
