--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,75 @@
-/* You can add global styles to this file, and also import other style files */
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+$aquamarine-palette2: (
+  50 : #f0fffa,
+  100 : #d9fff2,
+  200 : #bfffea,
+  300 : #a5ffe1,
+  400 : #92ffda,
+  500 : #7fffd4,
+  600 : #77ffcf,
+  700 : #6cffc9,
+  800 : #62ffc3,
+  900 : #4fffb9,
+  A100 : #ffffff,
+  A200 : #ffffff,
+  A400 : #f5fffb,
+  A700 : #dbfff0,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #000000,
+    700 : #000000,
+    800 : #000000,
+    900 : #000000,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+$aquamarine-palette: mat.define-palette($aquamarine-palette2, 500);
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$jira-web-primary: mat.define-palette($aquamarine-palette);
+$jira-web-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$jira-web-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$jira-web-theme: mat.define-dark-theme((
+  color: (
+    primary: $jira-web-primary,
+    accent: $jira-web-accent,
+    warn: $jira-web-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($jira-web-theme);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
