--- a/src/app/components/project-view/sprint-list/sprint-item/sprint-item.component.scss
+++ b/src/app/components/project-view/sprint-list/sprint-item/sprint-item.component.scss
@@ -1,10 +1,11 @@
+
 .title {
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
 }
 
 .details {
-    font-size: 16px;
+    font-size: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,23 +15,22 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     padding: 10px 20px;
     margin-bottom: 10px;
-    border: 3px solid;
-    border-color: aquamarine;
+    border: 2px solid aquamarine;
     border-radius: 10px;
     transition: border-color 0.3s;
-    height: 44px;
+    height: 30px;
     align-items: center;
 }
 
 .container:hover {
-    background-color: #e6e6e6;
+    background-color: gray;
     border-color: rgb(0, 255, 170);
 }
 
 .icon-size {
     font-size: 24px;
     cursor: pointer;
+    color: aquamarine;
 }
