--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,25 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
-  
+
   header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 30px 5%;
     background-color: #24252a;
   }
-  
-  .logo {
-    cursor: pointer;
-    color: #edf0f1;
-    font-size: 30px;
-   
 
+  .logo-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 36px;
+    text-shadow: 0 0 24px white;
+    font-family: 'Roboto Slab', serif;
+    color: aquamarine;
+    width: 150px;
+    letter-spacing: 2px;
+    cursor: pointer;
   }
-  
+
   .nav__links a,
   .cta,
   .overlay__content a {
@@ -29,24 +36,24 @@
     text-decoration: none;
     font-size: 20px;
   }
-  
+
   .nav__links {
     list-style: none;
     display: flex;
   }
-  
+
   .nav__links li {
     padding: 0px 20px;
   }
-  
+
   .nav__links li a {
     transition: color 0.3s ease 0s;
   }
-  
+
   .nav__links li a:hover {
     color: #0088a9;
   }
-  
+
   .cta {
     padding: 9px 25px;
     background-color: rgba(0, 136, 169, 1);
@@ -55,17 +62,17 @@
     cursor: pointer;
     transition: background-color 0.3s ease 0s;
   }
-  
+
   .cta:hover {
     background-color: rgba(0, 136, 169, 0.8);
   }
-  
+
   /* Mobile Nav */
-  
+
   .menu {
     display: none;
   }
-  
+
   .overlay {
     height: 100%;
     width: 0;
@@ -77,11 +84,11 @@
     overflow-x: hidden;
     transition: width 0.5s ease 0s;
   }
-  
+
   .overlay--active {
     width: 100%;
   }
-  
+
   .overlay__content {
     display: flex;
     height: 100%;
@@ -89,14 +96,14 @@
     align-items: center;
     justify-content: center;
   }
-  
+
   .overlay a {
     padding: 15px;
     font-size: 36px;
     display: block;
     transition: color 0.3s ease 0s;
   }
-  
+
   .overlay a:hover,
   .overlay a:focus {
     color: #0088a9;
@@ -108,7 +115,7 @@
     font-size: 60px;
     color: #edf0f1;
   }
-  
+
   @media screen and (max-height: 450px) {
     .overlay a {
       font-size: 20px;
@@ -119,7 +126,7 @@
       right: 35px;
     }
   }
-  
+
   @media only screen and (max-width: 800px) {
     .nav__links,
     .cta {
@@ -129,4 +136,3 @@
       display: initial;
     }
   }
-  
