--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="menu-navbar-container">
   <div class="logo-container" (click)="onLogoPressed()">
     <img src="/assets/logo.svg" width="48px" height="48px">
     Jira
@@ -11,15 +11,21 @@
             <li><a routerLink="create-project">Utwórz projekt</a></li>
         </ul>
     </nav>
-    <a class="cta" href="#">Kontakt</a>
-    <p class="menu cta">Menu</p>
-</header>
-<div class="overlay">
-    <a class="close">&times;</a>
-    <div class="overlay__content">
-        <a routerLink="projects">Projekty</a>
-        <a routerLink="board">Tablica</a>
-        <a routerLink="create-project" >Utwórz projekt</a>
+    <div class="right-navbar">
+      <div class="profile">
+        <div class="name-and-email">
+          <div class="name">
+            Bogdan
+          </div>
+          <div class="email">
+            bogdan.kajdanki@gmail.com
+          </div>
+
+        </div>
+        <img src='https://www.w3schools.com/w3css/img_avatar3.png' class="bg employee-bar-item circle" style="width:50px">
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </div>
+      <mat-icon class="icon" matTooltip="Wyloguj">logout</mat-icon>
     </div>
-</div>
+</header>
 <app-sidenav></app-sidenav>
