--- a/src/app/components/main/account-view/account-view.component.html
+++ b/src/app/components/main/account-view/account-view.component.html
@@ -18,7 +18,8 @@
                     <form>
                         <div class="mb-3">
                             <label class="small mb-1" for="inputUsername" >Username (how your name will appear to other users on the site)</label>
-                            <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="username" required>
+                            <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="firstName" required>
+                            {{firstName}}
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
