--- a/src/app/components/main/account-view/account-view.component.html
+++ b/src/app/components/main/account-view/account-view.component.html
@@ -18,44 +18,44 @@
                     <form>
                         <div class="mb-3">
                             <label class="small mb-1" for="inputUsername" >Username (how your name will appear to other users on the site)</label>
-                            <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="firstName" required>
-                            {{firstName}}
+                            <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="" [(ngModel)]="userInfo.username" [ngModelOptions]="{standalone: true}" required>
+                           
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputFirstName">First name</label>
-                                <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" value="Valerie">
+                                <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" value="" [(ngModel)]="userInfo.firstName" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputLastName">Last name</label>
-                                <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" value="Luna">
+                                <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" value="" [(ngModel)]="userInfo.lastName" [ngModelOptions]="{standalone: true}">
                             </div>
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputOrgName">Organization name</label>
-                                <input class="form-control" id="inputOrgName" type="text" placeholder="Enter your organization name" value="Start Bootstrap">
+                                <input class="form-control" id="inputOrgName" type="text" placeholder="Enter your organization name" value="" [(ngModel)]="userInfo.organizationName" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputLocation">Location</label>
-                                <input class="form-control" id="inputLocation" type="text" placeholder="Enter your location" value="San Francisco, CA">
+                                <input class="form-control" id="inputLocation" type="text" placeholder="Enter your location" value="" [(ngModel)]="userInfo.location" [ngModelOptions]="{standalone: true}">
                             </div>
                         </div>
                         <div class="mb-3">
                             <label class="small mb-1" for="inputEmailAddress">Email address</label>
-                            <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter your email address" value="name@example.com">
+                            <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter your email address" value="" [(ngModel)]="userInfo.email" [ngModelOptions]="{standalone: true}" disabled="true">
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputPhone">Phone number</label>
-                                <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="555-123-4567">
+                                <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="" [(ngModel)]="userInfo.phoneNumber" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputBirthday">Birthday</label>
-                                <input class="form-control" id="inputBirthday" type="text" name="birthday" placeholder="Enter your birthday" value="06/10/1988">
+                                <input class="form-control" id="inputBirthday" type="text" name="birthday" placeholder="Enter your birthday" value="" [(ngModel)]="userInfo.birthday" [ngModelOptions]="{standalone: true}">
                             </div>
                         </div>
-                        <button class="btn btn-primary" type="button" >Save changes</button>
+                        <button class="btn btn-primary" type="button" (click)="saveChanges()" >Save changes</button>
                     </form>
                 </div>
             </div>
