--- a/src/app/components/main/account-view/account-view.component.html
+++ b/src/app/components/main/account-view/account-view.component.html
@@ -3,59 +3,59 @@
     <div class="row">
         <div class="col-xl-4">
             <div class="card mb-4 mb-xl-0">
-                <div class="card-header">Profile Picture</div>
+                <div class="card-header">Zdjęcie Profilowe</div>
                 <div class="card-body text-center">
                     <img class="img-account-profile rounded-circle mb-2" src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-                    <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
-                    <button class="btn btn-primary" type="button">Upload new image</button>
+                    <div class="small font-italic text-muted mb-4">JPG lub PNG nie większe niż 5 MB</div>
+                    <button class="btn btn-primary" type="button" >Załaduj zdjęcie</button>
                 </div>
             </div>
         </div>
         <div class="col-xl-8">
             <div class="card mb-4">
-                <div class="card-header">Account Details</div>
+                <div class="card-header">Profil</div>
                 <div class="card-body">
                     <form>
                         <div class="mb-3">
-                            <label class="small mb-1" for="inputUsername" >Username (how your name will appear to other users on the site)</label>
-                            <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="" [(ngModel)]="userInfo.username" [ngModelOptions]="{standalone: true}" required>
+                            <label class="small mb-1" for="inputUsername" >Nazwa Użytkownika (Nazwa, którą będą widzieć inni użytkownicy)</label>
+                            <input class="form-control" id="inputUsername" type="text" placeholder="Podaj nazwę użytkownika" value="" [(ngModel)]="userInfo.username" [ngModelOptions]="{standalone: true}" required>
                            
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputFirstName">First name</label>
-                                <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" value="" [(ngModel)]="userInfo.firstName" [ngModelOptions]="{standalone: true}">
+                                <label class="small mb-1" for="inputFirstName">Imię</label>
+                                <input class="form-control" id="inputFirstName" type="text" placeholder="Podaj imię" value="" [(ngModel)]="userInfo.firstName" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputLastName">Last name</label>
-                                <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" value="" [(ngModel)]="userInfo.lastName" [ngModelOptions]="{standalone: true}">
+                                <label class="small mb-1" for="inputLastName">Nazwisko</label>
+                                <input class="form-control" id="inputLastName" type="text" placeholder="Podaj nazwisko" value="" [(ngModel)]="userInfo.lastName" [ngModelOptions]="{standalone: true}">
                             </div>
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputOrgName">Organization name</label>
-                                <input class="form-control" id="inputOrgName" type="text" placeholder="Enter your organization name" value="" [(ngModel)]="userInfo.organizationName" [ngModelOptions]="{standalone: true}">
+                                <label class="small mb-1" for="inputOrgName">Nazwa organizacji</label>
+                                <input class="form-control" id="inputOrgName" type="text" placeholder="Podaj nazwę organizacji" value="" [(ngModel)]="userInfo.organizationName" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputLocation">Location</label>
-                                <input class="form-control" id="inputLocation" type="text" placeholder="Enter your location" value="" [(ngModel)]="userInfo.location" [ngModelOptions]="{standalone: true}">
+                                <label class="small mb-1" for="inputLocation">Lokalizacja</label>
+                                <input class="form-control" id="inputLocation" type="text" placeholder="Podaj lokalizację" value="" [(ngModel)]="userInfo.location" [ngModelOptions]="{standalone: true}">
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label class="small mb-1" for="inputEmailAddress">Email address</label>
-                            <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter your email address" value="" [(ngModel)]="userInfo.email" [ngModelOptions]="{standalone: true}" disabled="true">
+                            <label class="small mb-1" for="inputEmailAddress">Adres mailowy</label>
+                            <input class="form-control" id="inputEmailAddress" type="email" placeholder="Zmień adres mailowy" value="" [(ngModel)]="userInfo.email" [ngModelOptions]="{standalone: true}" disabled="true">
                         </div>
                         <div class="row gx-3 mb-3">
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputPhone">Phone number</label>
-                                <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="" [(ngModel)]="userInfo.phoneNumber" [ngModelOptions]="{standalone: true}">
+                                <label class="small mb-1" for="inputPhone">Numer telefonu</label>
+                                <input class="form-control" id="inputPhone" type="tel" placeholder="Podaj numer telefonu" value="" [(ngModel)]="userInfo.phoneNumber" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputBirthday">Birthday</label>
-                                <input class="form-control" id="inputBirthday" type="text" name="birthday" placeholder="Enter your birthday" value="" [(ngModel)]="userInfo.birthday" [ngModelOptions]="{standalone: true}">
+                                <label class="small mb-1" for="inputBirthday">Data urodzenia</label>
+                                <input class="form-control" id="inputBirthday" type="text" name="birthday" placeholder="Podaj datę urodzenia" value="" [(ngModel)]="userInfo.birthday" [ngModelOptions]="{standalone: true}">
                             </div>
                         </div>
-                        <button class="btn btn-primary" type="button" (click)="saveChanges()" >Save changes</button>
+                        <button class="btn btn-primary" type="button" (click)="saveChanges()" >Zapisz zmiany</button>
                     </form>
                 </div>
             </div>
