--- a/src/app/components/main/account-view/account-view.component.scss
+++ b/src/app/components/main/account-view/account-view.component.scss
@@ -10,6 +10,7 @@ body{margin-top:20px;
     }
     .card {
         box-shadow: 0 0.15rem 1.75rem 0 rgb(33 40 50 / 15%);
+        background-color: #0bb397;
     }
     .card .card-header {
         font-weight: 500;
@@ -42,8 +43,8 @@ body{margin-top:20px;
     }
     
     .nav-borders .nav-link.active {
-        color: #0061f2;
-        border-bottom-color: #0061f2;
+        color: aquamarine;
+        border-bottom-color: aquamarine;;
     }
     .nav-borders .nav-link {
         color: #69707a;
@@ -56,4 +57,7 @@ body{margin-top:20px;
         padding-right: 0;
         margin-left: 1rem;
         margin-right: 1rem;
+    }
+    .card mb-4 mb-xl-0{
+
     }
