--- a/src/app/components/main/sidenav/sidenav.component.html
+++ b/src/app/components/main/sidenav/sidenav.component.html
@@ -2,21 +2,15 @@
     <mat-sidenav #sidenav mode="side" opened="true">
       <!-- Zawartość SideNav -->
       <ul>
-        <li><a routerLink="dashboard">Strona główna</a></li>
+        <li><a routerLink="/dashboard">Strona główna</a></li>
         <li><a routerLink="/">Backlog</a></li>
-        <li><a routerLink="/about">Aktywne sprinty</a></li>
+        <li><a routerLink="/about" >Aktywne sprinty</a></li>
         <li><a routerLink="/contact">{{this.nameOfProject}}</a></li>
 
       </ul>
     </mat-sidenav>
     <mat-sidenav-content>
-      <!--<div *ngIf="current == 'default'"  > 
-        <app-projectlist [title]="'Kolor'" [items]="['Czerwony', 'Niebieski', 'Zielony', 'Żółty']"></app-projectlist>
-        <button mat-fab extended (click)="(current = 'project-creation')"><b><mat-icon>add</mat-icon></b></button>
-      </div>  
-      <div *ngIf="current == 'project-creation'"  > 
-        <app-project-creation-view/>
-      </div>-->
+     
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
